--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -263,6 +263,7 @@
 <script src="../../js/jquery.twbsPagination.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 
 <script>
 $(document).ready(function(){
