--- a/view/login/findId.html
+++ b/view/login/findId.html
@@ -103,6 +103,7 @@ input[type=text] {
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 
 <script>
     $(document).ready(function(){
