--- a/view/login/showId.html
+++ b/view/login/showId.html
@@ -31,6 +31,7 @@
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 <script>
     $(document).ready(function(){
         let urlParams = location.search.split(/[?&]/).slice(1).map(function(paramPair) {
