--- a/view/myPage/userEdit.html
+++ b/view/myPage/userEdit.html
@@ -88,6 +88,7 @@
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 <script src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d9229def17f744d57603391f713d5651&libraries=services"></script>
 <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 <script>
