--- a/view/admin/community-storyTag.html
+++ b/view/admin/community-storyTag.html
@@ -600,8 +600,6 @@ let searchText = "";
 
 $(document).ready(function() {
 
-    $('div[name=itemDetail]').hide();
-
     $('.move_input input').focus( function() { // 날짜 선택시 글씨 이동 이벤트
         $(this).parent().addClass('active')
     });
@@ -659,6 +657,8 @@ $(document).ready(function() {
             $(".s_date").datepicker( "option", "maxDate", selectedDate );
         }   
     });
+
+    $('div[name=itemDetail]').hide();
 
 });
 
@@ -819,7 +819,7 @@ function getStoryTagList(pageNum) {
 
                         /* 태그 들어가는 부분 */
 
-                    app+=        '<img width="600px" height="600px" style="width: 720px;height: 660px;" src="http://192.168.0.231:3000/upload/'+val.cardFileName+'">'
+                    app+=        '<img width="600px" height="600px" style="width: 720px;height: 660px; object-fit: cover;" src="http://192.168.0.231:3000/upload/'+val.cardFileName+'">'
                         +    '</div>'
                         +'</div>'
 
