--- a/view/community/event.html
+++ b/view/community/event.html
@@ -82,6 +82,7 @@
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 
 <script>
     $(document).ready(function(){
