--- a/view/community/eventWrite.html
+++ b/view/community/eventWrite.html
@@ -115,6 +115,7 @@
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../js/includeHTML.js"></script>
     <script src="../../js/header.js"></script>
+    <script src="../../js/slang.js"></script>
     <!-- 써머노트 스크립트 시작 -->
     <script src="../../css/summernote/summernote-lite.js"></script>
     <script src="../../css/summernote/summernote-ko-KR.js"></script>
