--- a/view/community/storyUpdate.html
+++ b/view/community/storyUpdate.html
@@ -328,6 +328,7 @@
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 
 <script>
 
