--- a/view/login/login.html
+++ b/view/login/login.html
@@ -115,6 +115,7 @@
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../js/header.js"></script>
+    <script src="../../js/slang.js"></script>
 
 <script>
 
