--- a/view/login/regi.html
+++ b/view/login/regi.html
@@ -331,7 +331,8 @@
     <script src="../../assets/js/jquery.min.js"></script>
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../js/header.js"></script>
-
+    <script src="../../js/slang.js"></script>
+    
 <script>
 
 
