--- a/view/login/regiAf.html
+++ b/view/login/regiAf.html
@@ -37,6 +37,7 @@
     <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="../../js/includeHTML.js"></script>
     <script src="../../js/header.js"></script>
+    <script src="../../js/slang.js"></script>
 
     <script>
         $('#goHome').click(function() {
