--- a/view/store/orderAf.html
+++ b/view/store/orderAf.html
@@ -146,4 +146,5 @@
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
 <script src="../../js/header.js"></script>
+<script src="../../js/slang.js"></script>
 </html>
